Working risc-v port with m extension